src/objects/ADBMPEServiceParameter__mdt.object
<CustomObject>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actor__c</fullName>
        <label>actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>optum_cid_ext__c</fullName>
        <label>optum_cid_ext</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scope__c</fullName>
        <label>scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ADBMPEServiceParameter</label>
    <pluralLabel>ADBMPEServiceParameters</pluralLabel>
</CustomObject>